--- a/projeto/projeto.html
+++ b/projeto/projeto.html
@@ -8,9 +8,12 @@
         <link rel="stylesheet" href="estilo.css">
     </head>
     <body>
-   
-                        
-        <img src="analise-de-dados-de-negocios-com-software-inteligente-tacito-que-faz-estrategia-de-marketing_31965-36087.avif";>
+        <ul>
+            <li><a href="index.html">-MERCADO DE TRABALHO</a></li>
+            <li>a</li>
+            <li>b</li>
+        </ul>
+        <img src="img/Intel-Core-i9-13th-gen.jpg">
         <h1 class="titulo">DESENVOLVIMETO DE SISTEMAS</h1>
 
         <div class="cs">
@@ -18,11 +21,11 @@
             </h2>
         </div>
 
-        <p>O desenvolvimento de sistemas é um processo que envolve a criação de softwares para atender às necessidades das empresas.</p>
+        <p">O desenvolvimento de sistemas é um processo que envolve a criação de softwares para atender às necessidades das empresas.</p>
         <p>A Análise e Desenvolvimento de Sistemas é o processo de criação de softwares para empresas, desde análise de necessidades até design, codificação, testes e documentação.
 
             O curso de Análise e Desenvolvimento de Sistemas é uma formação superior de tecnologia que prepara os estudantes para atuar no desenvolvimento e manutenção de sistemas computacionais. Durante a formação os alunos estudam técnicas voltadas à projetação de software eficientes.</p>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS28a5vbs5wf9tnZV7CelH9WnMVGqCfE1G5lstwuEljjKywQXjSRlLmvNv1GJ61uObVnx0&usqp=CAU">
+            <img src="./img/analise-de-dados-de-negocios-com-software-inteligente-tacito-que-faz-estrategia-de-marketing_31965-36087.avif">
 
             <div class="ff">
                 <h2>O QUE É REALIZADO NO DESENVOLVIMENTO DE SISTEMAS?</h2>
@@ -39,7 +42,7 @@
                 
                 A tendência é que isso se torne ainda mais evidente.
                 A popularização da conexão 5G também deve fazer com que a área seja impulsionada, tendo em vista que tecnologias mais avançadas poderão ser desenvolvidas.</p>
-            <img src="sof.avif">
+            <img src="./img/sof.avif">
             <p>O GitHub é uma plataforma de desenvolvimento colaborativo que aloja projetos na nuvem utilizando o sistema de controle de versões chamado Git. A plataforma ajuda os desenvolvedores a armazenar e administrar o código e faz o registro de mudanças</p>
             <a href="https://github.com/">GitHub</a>
         </body>
