--- a/trabalho/index.html
+++ b/trabalho/index.html
@@ -29,13 +29,13 @@
         <hr>
         <ul class="freefa">
             <li class="ff">
-                <h2>Java</h2>
-                 <img src="css/imagem/a9ef1cf3_2048x.webp" />
+                <h2>Preto e Dourado</h2>
+                 <img src="css/imagem/c27172_c2c5808d12da488c86c04523aa9e0f97_mv2-removebg.png" />
                  <p>R$ 70,00</p>
             </li>
             <li class="ff">
                 <h2>Java Script</h2>
-                <img src="css/imagem/camisa_nba_golden_state_warriors_jordan_association_edition_jersey_stephen_curry_30_1103_2_4d3e24ed7a0d4be8a6639c92c7d2901b.webp" /> 
+                <img src="css/imagem/2_483c9bbd-7aa6-409d-81be-b214493bd9e6_1024x1024_2x1-81c2fa4b0c2e7bfe6616767527846452-640-0-removebg-preview (1).png" /> 
                 <p>R$ 100,00</p>
             </li>
             <li class="ff">
@@ -69,7 +69,7 @@
        
           
     </section>
-    <p class="direitos">site criado por Lucas Schneider dos Santos 2024 Todos os direitos reservados
+    <p class=
     </p>
 </body>
 </html>
