--- a/trabalho/index.html
+++ b/trabalho/index.html
@@ -40,7 +40,7 @@
             </li>
             <li class="ff">
                 <h2>Css</h2>
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" />
+                <img src="css/imagem/c27172_bd22b801732b45949f8a81199cfddd2f_mv2-removebg-preview.png" />
                 <p>R$ 80,00</p>
             </li>
             <li class="ff">
