--- a/trabalho/contatos.html
+++ b/trabalho/contatos.html
@@ -13,14 +13,13 @@
 <body>  
     <header> 
         <div class="img-container">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/devicon/devicon-plain.svg">   
+        <img src="css/imagem/Leonardo_Phoenix_Create_a_logo_for_a_basketball_sales_website_1.jpg">   
         <h1>Programação</h1>
         </div>
     </header>
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="cursos.html">Cursos</a></li>
             <li><a href="contatos.html">Contato</a></li>
             <li><a href="info.html">Informações</a></li>
         </ul>
