--- a/trabalho/info.html
+++ b/trabalho/info.html
@@ -13,14 +13,13 @@
 <body>  
     <header> 
         <div class="img-container">
-        <img src="imagens/transparent-text-line-technology-diagram-sharing-layer1-crenet-strony-internetowe-gdynia-stron5e4eaad2d39608.9019504615822138428667.png">   
+        <img src="css/imagem/Leonardo_Phoenix_Create_a_logo_for_a_basketball_sales_website_1.jpg">   
         <h1>Programação</h1>
         </div>
     </header>
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="cursos.html">Cursos</a></li>
             <li><a href="contatos.html">Contato</a></li>
             <li><a href="info.html">Informações</a></li>
         </ul>
@@ -57,7 +56,3 @@
             </tr>
         </table>
     </section>
-
-    <footer>
-        <p>&#9904; Todos os direitos reservados. &#9760;</p>
-    </footer>
